@@ -17,12 +17,13 @@ import org.jboss.da.products.impl.AggregatedProductProvider;
 import org.jboss.da.products.impl.PncProductProvider;
 import org.jboss.da.products.impl.RepositoryProductProvider;
 import org.jboss.da.reports.api.LookupGenerator;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -31,13 +32,13 @@ import java.util.List;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-import static org.mockito.Matchers.eq;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
 public class LookupGeneratorTest {
 
     public static final String PERSISTENT = "persistent";
@@ -64,14 +65,14 @@ public class LookupGeneratorTest {
         DAConfig daConfig = new DAConfig();
         LookupMode mode = new LookupMode();
         mode.setName(PERSISTENT);
-        mode.setSuffixes(Arrays.asList("redhat"));
+        mode.setSuffixes(List.of("redhat"));
         daConfig.setModes(Collections.singletonList(mode));
         when(config.getConfig()).thenReturn(daConfig);
         lookupGenerator = new LookupGeneratorImpl(config);
     }
 
-    @BeforeClass
-    public static void initMocks() throws ConfigurationParseException {
+    @BeforeAll
+    public static void initMocks() {
     }
 
     @Test
